--- a/src/examples/presentation/styles.css
+++ b/src/examples/presentation/styles.css
@@ -49,7 +49,7 @@ body {
   letter-spacing: 0.4em;
 }
 
-.slide1, .slide2, .slide3, .slide4 {
+.intro-slide .slide {
 	position: fixed;
 	top: 20%;
 	left: 0;
@@ -57,6 +57,27 @@ body {
 	text-align: center;
 	visibility: hidden;
 }
+
+@media all and (min-width: 839px) {
+	
+	.intro-slide .slide {
+		top: 30%;
+		width: 80%;
+		left: 12%;
+	}
+	
+	/* For smaller devices show slides coming down the page */
+	.flex__row {
+		display: block;
+		align-items: initial;
+		margin-top: 20%;
+	}
+	.flex__col {
+		flex: initial;
+	}	
+	
+}
+
 
 .slide1 { animation: zoomin__leave 3s; animation-delay: 0s; animation-fill-mode: backwards; visibility: hidden; }
 .slide2 { animation: zoomin__leave 3s; animation-delay: 3s; animation-fill-mode: backwards; visibility: hidden; }
