feat: Presentation - further fixes

--- a/src/examples/presentation/styles.css
+++ b/src/examples/presentation/styles.css
@@ -5,6 +5,8 @@ body {
 	color: white;
 	overflow-x: hidden;
 	overflow-y: hidden;	
+	/*invisble test*/
+	opacity: 0.3;
 }
 
 .close-presentation {
@@ -26,12 +28,6 @@ body {
 	z-index: 10100;
 }
 
-.slides {
-	/*invisble test*/
-	xxborder: solid 2px white;
-	xxopacity: 0.15;
-}	
-
 
 .slideshow {
   font-family: Impact;
@@ -52,16 +48,6 @@ body {
 	flex: 50%;
 }
 
-.slide {
-	/* 
-		Force each slide into the center middle.
-		As we can't animation "display:none" we have to use visibility, which means the div still takes up 
-		space on the page.  Basically each slide appears in the wrong place, unless we force each slide to the middle.
-	*/
-	xxposition: absolute;
-	xxborder: solid 10px silver;
-}
-
 .intro-slide {
 	width: 100%;
 }
@@ -71,43 +57,21 @@ body {
 	text-align: center;
 	/* set width so length of heading is predicable for centering in the screen */
 	width: 100%;
-  xxletter-spacing: 0.4em;
 }
 
 .intro-slide .slide {
 	position: fixed;
-	xxtop: 20%;
 	left: 0;
 	width: 100%;
 	text-align: center;
 	visibility: hidden;
 }
 
-@media all and (min-width: 0px) and (max-width: 800px) {
-	
-	.intro-slide .slide {
-		top: 30%;
-		width: 80%;
-		left: 12%;
-	}
-	
-	/* For smaller devices show slides coming down the page */
-	.flex__row {
-		display: block;
-		align-items: initial;
-		margin-top: 20%;
-	}
-	.flex__col {
-		flex: initial;
-	}	
-	
-}
 
 
 .slide1 { animation: zoomin__leave 3s; animation-delay: 0s; animation-fill-mode: backwards; visibility: hidden; }
 .slide2 { animation: zoomin__leave 3s; animation-delay: 3s; animation-fill-mode: backwards; visibility: hidden; }
 .slide3 { animation: zoomin__leave 3s; animation-delay: 6s; animation-fill-mode: backwards; visibility: hidden; }
-
 
 @keyframes zoomin__leave {
 	0% {
@@ -121,8 +85,6 @@ body {
 }
 
 
-.xstats-slide { display: none; }
-
 .stats-slide h1 { 
 	font-size: 2em;
 	text-align: center; 
@@ -130,16 +92,8 @@ body {
 	padding: 0;
 }
 
-.stats-slide h1.top {
-	/* shift heading to just over the top of the image */
+.stats-slide h1.top, .stats-slide h1.bot {
 	position: relative;
-	top: 0.5em;
-} 
-
-.stats-slide h1.bot {
-	/* shift heading to just over the top of the image */
-	position: relative;
-	top: -0.5em;
 } 
 
 .stats-slide h1.top, .stats-slide h1.bot {
@@ -148,8 +102,6 @@ body {
 	font-weight: normal;
 	display: inline-block;
 	text-align: center;
-	width: 50%;
-	left: 25%;	
 }
 
 
@@ -158,10 +110,10 @@ body {
 	margin: auto;
 }
 
-.slide5 { animation: zoomin__remain 3s; animation-delay: 10s; animation-fill-mode: forwards; visibility: hidden; }
-.slide6 { animation: zoomin__remain 3s; animation-delay: 13s; animation-fill-mode: forwards; visibility: hidden; }
-.slide7 { animation: zoomin__remain 3s; animation-delay: 16s; animation-fill-mode: forwards; visibility: hidden; }
-.slide8 { animation: zoomin__remain 3s; animation-delay: 19s; animation-fill-mode: forwards; visibility: hidden; }
+.slide5 { animation: zoomin__remain 1s; animation-delay: 10s; animation-fill-mode: forwards; visibility: hidden; }
+.slide6 { animation: zoomin__remain 1s; animation-delay: 13s; animation-fill-mode: forwards; visibility: hidden; }
+.slide7 { animation: zoomin__remain 1s; animation-delay: 16s; animation-fill-mode: forwards; visibility: hidden; }
+.slide8 { animation: zoomin__remain 1s; animation-delay: 19s; animation-fill-mode: forwards; visibility: hidden; }
 
 @keyframes zoomin__remain {
 	0% {
@@ -176,3 +128,57 @@ body {
 	}
 }
 
+
+/* DESKTOP */
+@media all and (min-width: 800px) {
+
+	.stats-slide h1.top, .stats-slide h1.bot {
+		width: 80%;
+		left: 10%;
+	}
+
+	.stats-slide h1.top {
+		/* shift heading to just over the top of the image */
+		top: 0.5em;
+	} 
+	
+}
+
+/* MOBILE */
+@media all and (min-width: 0px) and (max-width: 800px) {
+	
+	.intro-slide .slide, .stats-slide .slide {
+		position: fixed;
+		width: 100%;
+		top: 25%;
+	}
+
+	.stats-slide h1.top, .stats-slide h1.bot {
+		width: 100%;
+	}
+
+	.intro-slide h1 { 
+		font-size: 5em; 
+	}	
+	.stats-slide h1 {
+		font-size: 3em;
+	}
+
+	.stats-slide h1.top {
+		/* shift heading to just over the top of the image */
+		top: -1.5em;
+	} 
+	
+	.stats-slide h1.bot {
+		top: 1.5em;
+	} 
+
+
+	/* For smaller devices show slides coming down the page */
+	.flex__row {
+	}
+	.flex__col {
+		flex: initial;
+	}	
+	
+}
