--- a/src/examples/drag-and-drop/styles.css
+++ b/src/examples/drag-and-drop/styles.css
@@ -1,6 +1,12 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
+.hide {
+	display: none;
+}
+.show {
+	display: inline-block;
+}
 .draggable {
 	cursor: pointer;
 }
@@ -34,9 +40,11 @@ body {
 ol.side-picker--players li {
 	list-style-type: none;
 	display: inline-block;
-	width: 20%;
+	xxmax-width: 30%;
 	height: 50px;
+	border: solid 1px #eee;
 }
+
 
 /*watermark*/
 __section.team header {
