docs: Commenting on how the button animation works

--- a/src/examples/drag-and-drop/styles.css
+++ b/src/examples/drag-and-drop/styles.css
@@ -45,6 +45,9 @@ ol.side-picker--players li {
 	border: solid 1px #eee;
 }
 
+.team-picker-button {
+	cursor: pointer;
+}
 
 /*watermark*/
 __section.team header {
