ux: Use "move" cursor on draggable elements.

--- a/src/examples/drag-and-drop/styles.css
+++ b/src/examples/drag-and-drop/styles.css
@@ -8,7 +8,7 @@ body {
 	display: inline-block;
 }
 .draggable {
-	cursor: pointer;
+	cursor: move;
 }
 .dragging-effect {
 	background-color: lightblue;
